--- a/project-board-practice-spring/src/main/resources/application.yaml
+++ b/project-board-practice-spring/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ management.endpoints.web.exposure.include: "*"
 
 logging:
   level:
-    com.fastcampus.projectboard: debug
+    com.board.projectboard: debug
     org.springframework.web.servlet: debug
     org.hibernate.type.descriptor.sql.BasicBinder: trace
 
@@ -14,7 +14,6 @@ spring:
     password: asdf12345
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    open-in-view: false
     defer-datasource-initialization: true
     hibernate.ddl-auto: create
     show-sql: true
@@ -22,7 +21,20 @@ spring:
       hibernate.format_sql: true
       hibernate.default_batch_fetch_size: 100
   sql.init.mode: always
-  data:
-    rest:
+  data.rest:
       base-path: /api
       detection-strategy: annotated
+  thymeleaf3:
+    decoupled-logic: true
+
+
+
+
+
+
+
+
+
+
+
+
